person builder added - from clean setup deletion of the Person.class file is needed in order for the annotation processor to generate PersonBuilder

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
                     <source>1.8</source>
                     <target>1.8</target>
                     <encoding>UTF-8</encoding>
+                    <annotationProcessors>
+                        <annotationProcessor>
+                            edu.tseidler.processor.BuilderProcessor
+                        </annotationProcessor>
+                    </annotationProcessors>
                 </configuration>
             </plugin>
         </plugins>
